--- a/Spring-with-Annotations-pending/.project
+++ b/Spring-with-Annotations-pending/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Spring-with-Annotations-pending</name>
+	<name>Spring-with-Annotations</name>
 	<comment></comment>
 	<projects>
 	</projects>
