--- a/Maven-FootBall-Servlet-Class/src/main/webapp/WEB-INF/web.xml
+++ b/Maven-FootBall-Servlet-Class/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,19 @@
   	<description></description>
   	<servlet-class>com.example.ListLeagueServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>AddLeague</servlet-name>
+  	<display-name>AddLeague</display-name>
+  	<description></description>
+  	<servlet-class>com.example.AddLeague</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>ListLeagueServlet</servlet-name>
   	<url-pattern>/list_leagues.view</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AddLeague</servlet-name>
+  	<url-pattern>/addLeague</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
   	<welcome-file>welcome.html</welcome-file>
