--- a/Spring-mvc-param-Web/.project
+++ b/Spring-mvc-param-Web/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Maven-Scope-Request-20-Pending</name>
+	<name>Spring-mvc-param-Web</name>
 	<comment></comment>
 	<projects>
 	</projects>
