--- a/SpringBoot-Thymeleaf/pom.xml
+++ b/SpringBoot-Thymeleaf/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.ibm</groupId>
 	<artifactId>Spring-Boot-Application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBoot-Using-Rest-NoController</name>
-	<description>Demo project for Spring Boot</description>
+	<name>SpringBoot-Thymeleaf</name>
+	<description>Demo project for Spring Boot thymeleaf </description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -21,21 +21,16 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
