--- a/Eureka-Server-SpringCloud/src/main/resources/application.yml
+++ b/Eureka-Server-SpringCloud/src/main/resources/application.yml
@@ -1,6 +1,10 @@
+server:
+  port: 8761
 eureka:
+  instance:
+    hostname: localhost
   client:
     fetch-registry: false
     register-with-eureka: false
-server:
-  port: 8761
+    serviceUrl: 
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka      
