--- a/Spring-Boot-Ecommerce-microservices/src/main/resources/application.yml
+++ b/Spring-Boot-Ecommerce-microservices/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: bhanukiran@1
-    url: jdbc:mysql://localhost:3306/hr?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
   jpa:
     properties:
